All non-GET routes require authorization on swaggerdocs
